--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "baseUrl": "src",
     "paths": {
       "components/*": [
@@ -12,6 +14,12 @@
       ],
       "constants": [
         "./constants/*",
+      ],
+      "services/*": [
+        "./services/*",
+      ],
+      "utils/*": [
+        "./utils/*",
       ],
       "assets/*": [
         "../assets/*",
