--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "lingui:extract": "lingui extract"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@lingui/core": "^5.3.3",
+    "@lingui/react": "^5.3.3",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/elements": "^2.3.8",
@@ -24,6 +27,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-linking": "~7.1.7",
+    "expo-localization": "^16.1.6",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -32,6 +36,7 @@
     "expo-web-browser": "~14.2.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
+    "ramda": "^0.31.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -51,6 +56,10 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@cspell/eslint-plugin": "^9.1.3",
+    "@lingui/babel-plugin-lingui-macro": "^5.3.3",
+    "@lingui/cli": "^5.3.3",
+    "@lingui/metro-transformer": "^5.3.3",
+    "@types/ramda": "^0.30.2",
     "@types/react": "~19.0.10",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^9.25.0",
