--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/core": "^7.25.2",
     "@cspell/eslint-plugin": "^9.1.3",
     "@eslint/json": "^0.13.0",
+    "@eslint/markdown": "^7.0.0",
     "@lingui/babel-plugin-lingui-macro": "^5.3.3",
     "@lingui/cli": "^5.3.3",
     "@lingui/metro-transformer": "^5.3.3",
