chore: add base tests

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@lingui/babel-plugin-lingui-macro": "^5.3.3",
     "@lingui/cli": "^5.3.3",
     "@lingui/metro-transformer": "^5.3.3",
+    "@types/jest": "^30.0.0",
     "@types/ramda": "^0.30.2",
     "@types/react": "~19.0.10",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
@@ -72,8 +73,11 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
+    "jest": "^30.0.4",
+    "jest-expo": "~53.0.9",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.4.0",
     "typescript": "~5.8.3"
   },
   "private": true
