--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "expo-build-properties",
       [
         "expo-router",
         {
@@ -41,7 +42,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "react-native-edge-to-edge"
+      "react-native-edge-to-edge",
+      "expo-build-properties"
     ],
     "experiments": {
       "typedRoutes": true
