--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.6",
+    "burnt": "^0.13.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
@@ -35,6 +37,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
@@ -50,6 +53,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-unistyles": "^3.0.3",
+    "react-native-version-check": "^3.5.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "reflect-metadata": "^0.2.2",
@@ -66,16 +70,19 @@
     "@types/jest": "^30.0.0",
     "@types/ramda": "^0.30.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-version-check": "^3.4.8",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
     "jest": "^30.0.4",
     "jest-expo": "~53.0.9",
     "lint-staged": "^16.1.2",
+    "mobx-persist-store": "^1.1.8",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
     "typescript": "~5.8.3"
