--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native": "0.79.5",
     "react-native-edge-to-edge": "1.6.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-mmkv": "^3.3.0",
     "react-native-nitro-modules": "^0.26.3",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
