chore: add rn keys

--- a/app.json
+++ b/app.json
@@ -2,7 +2,6 @@
   "expo": {
     "name": "myapp",
     "slug": "myapp",
-    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -27,6 +26,8 @@
     },
     "plugins": [
       "expo-build-properties",
+      "react-native-keys",
+      "react-native-edge-to-edge",
       [
         "expo-router",
         {
@@ -41,9 +42,7 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ],
-      "react-native-edge-to-edge",
-      "expo-build-properties"
+      ]
     ],
     "experiments": {
       "typedRoutes": true
