--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.1",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "bun run:app -- --platform=android",
+    "ios": "bun run:app -- --platform=ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "ts:check": "tsc --noEmit",
     "lingui:extract": "lingui extract",
     "prepare": "husky",
-    "release": "release-it"
+    "release": "release-it",
+    "run:app": "bun ./scripts/expo/start-app.ts"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -47,6 +48,7 @@
     "react-native": "0.79.5",
     "react-native-edge-to-edge": "1.6.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-keys": "^0.7.11",
     "react-native-mmkv": "^3.3.0",
     "react-native-nitro-modules": "^0.26.3",
     "react-native-pager-view": "6.7.1",
@@ -68,6 +70,7 @@
     "@lingui/babel-plugin-lingui-macro": "^5.3.3",
     "@lingui/cli": "^5.3.3",
     "@lingui/metro-transformer": "^5.3.3",
+    "@types/bun": "^1.2.18",
     "@types/jest": "^30.0.0",
     "@types/ramda": "^0.30.2",
     "@types/react": "~19.0.10",
@@ -87,6 +90,7 @@
     "prettier": "^3.6.2",
     "release-it": "^19.0.3",
     "ts-jest": "^29.4.0",
+    "tsx": "^4.20.3",
     "typescript": "~5.8.3"
   },
   "private": true
