--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@react-navigation/native": "^7.1.6",
     "burnt": "^0.13.0",
     "expo": "~53.0.17",
+    "expo-application": "~6.1.5",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.7",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
@@ -40,6 +42,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
+    "humps": "^2.0.1",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "ramda": "^0.31.3",
@@ -71,6 +74,7 @@
     "@lingui/cli": "^5.3.3",
     "@lingui/metro-transformer": "^5.3.3",
     "@types/bun": "^1.2.18",
+    "@types/humps": "^2.0.6",
     "@types/jest": "^30.0.0",
     "@types/ramda": "^0.30.2",
     "@types/react": "~19.0.10",
