chore: update services

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       ],
       "locales/*": [
         "../locales/*",
+      ],
+      "modules/*": [
+        "modules/*",
       ]
     }
   },
