--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "expo-secure-store",
       "expo-build-properties",
       "react-native-keys",
       "react-native-edge-to-edge",
