--- a/package.json
+++ b/package.json
@@ -34,14 +34,18 @@
     "expo-linking": "~7.1.7",
     "expo-localization": "^16.1.6",
     "expo-router": "~5.1.3",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
+    "humps": "^2.0.1",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
+    "ofetch": "^1.4.1",
+    "openapi-fetch": "^0.14.0",
     "ramda": "^0.31.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -60,6 +64,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "reflect-metadata": "^0.2.2",
+    "remeda": "^2.26.1",
     "tsyringe": "^4.10.0"
   },
   "devDependencies": {
@@ -71,6 +76,7 @@
     "@lingui/cli": "^5.3.3",
     "@lingui/metro-transformer": "^5.3.3",
     "@types/bun": "^1.2.18",
+    "@types/humps": "^2.0.6",
     "@types/jest": "^30.0.0",
     "@types/ramda": "^0.30.2",
     "@types/react": "~19.0.10",
