--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "@lingui/core": "^5.3.3",
     "@lingui/react": "^5.3.3",
     "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/drawer": "^7.5.3",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.6",
     "burnt": "^0.13.0",
-    "expo": "~53.0.17",
+    "expo": "53.0.20",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-localization": "^16.1.6",
-    "expo-router": "~5.1.3",
+    "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -89,7 +89,7 @@
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
-    "jest": "^30.0.4",
+    "jest": "~29.7.0",
     "jest-expo": "~53.0.9",
     "lint-staged": "^16.1.2",
     "mobx-persist-store": "^1.1.8",
